--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.8.0",
     "react": "18.2.0",
-    "react-native": "0.73.4",
-    "react-native-dotenv": "^3.4.10"
+    "react-native": "0.73.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
