--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "firebase": "^10.8.0",
     "react": "18.2.0",
     "react-native": "0.73.4",
-    "react-native-safe-area-context": "^4.9.0"
+    "react-native-safe-area-context": "^4.9.0",
+    "react-router-native": "^6.22.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
