--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^10.8.0",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-date-picker": "^4.3.6",
     "react-native-safe-area-context": "^4.9.0"
   },
   "devDependencies": {
