--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-animatable": "^1.4.0",
-    "react-router-native": "^6.22.1"
+    "react-router-native": "^6.22.1",
     "react-native-date-picker": "^4.3.6",
     "react-native-safe-area-context": "^4.9.0"
   },
