--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "react-native-animatable": "^1.4.0",
     "react-router-native": "^6.22.1",
     "react-native-date-picker": "^4.3.6",
-    "react-native-safe-area-context": "^4.9.0"
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-web": "~0.19.6",
+    "react-dom": "18.2.0",
+    "@expo/metro-runtime": "~3.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
