--- a/package.json
+++ b/package.json
@@ -9,19 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.22.1",
+    "@expo/metro-runtime": "~3.1.3",
     "expo": "~50.0.7",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.8.0",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.73.4",
     "react-native-animatable": "^1.4.0",
-    "react-router-native": "^6.22.1",
     "react-native-date-picker": "^4.3.6",
-    "react-native-safe-area-context": "^4.9.0",
     "react-native-web": "~0.19.6",
-    "react-dom": "18.2.0",
-    "@expo/metro-runtime": "~3.1.3"
+    "react-router-native": "^6.22.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
