--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
+    "@react-native-picker/picker": "^2.6.1",
     "expo": "~50.0.7",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.8.0",
@@ -17,6 +18,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.73.4",
     "react-native-animatable": "^1.4.0",
+    "react-native-calendars": "^1.1303.0",
     "react-native-date-picker": "^4.3.6",
     "react-native-web": "~0.19.6",
     "react-router-native": "^6.22.1"
