--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
+    "@react-native-async-storage/async-storage": "^1.22.2",
     "@react-native-picker/picker": "^2.6.1",
     "expo": "~50.0.7",
     "expo-status-bar": "~1.11.1",
