--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
     "@react-native-async-storage/async-storage": "^1.22.2",
+    "@react-native-community/checkbox": "^0.5.17",
     "@react-native-picker/picker": "^2.6.1",
+    "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~50.0.7",
     "expo-auth-session": "^5.4.0",
     "expo-status-bar": "~1.11.1",
@@ -24,7 +26,8 @@
     "react-native-date-picker": "^4.3.6",
     "react-native-google-signin": "^2.1.1",
     "react-native-web": "~0.19.6",
-    "react-router-native": "^6.22.1"
+    "react-router-native": "^6.22.1",
+    "expo-checkbox": "~2.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
