--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~50.0.7",
     "expo-auth-session": "^5.4.0",
+    "expo-checkbox": "~2.7.0",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.8.0",
     "react": "18.2.0",
@@ -25,9 +26,9 @@
     "react-native-calendars": "^1.1303.0",
     "react-native-date-picker": "^4.3.6",
     "react-native-google-signin": "^2.1.1",
+    "react-native-swipe-gestures": "^1.0.5",
     "react-native-web": "~0.19.6",
-    "react-router-native": "^6.22.1",
-    "expo-checkbox": "~2.7.0"
+    "react-router-native": "^6.22.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
