--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react-native-calendars": "^1.1303.0",
     "react-native-date-picker": "^4.3.6",
     "react-native-google-signin": "^2.1.1",
+    "react-native-image-slider-box": "^2.0.7",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-swipe-gestures": "^1.0.5",
     "react-native-web": "~0.19.6",
     "react-router-native": "^6.22.1"
