--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-google-signin": "^2.1.1",
     "react-native-image-slider-box": "^2.0.7",
     "react-native-input-spinner": "^1.8.1",
+    "react-native-maps": "^1.14.0",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-picker-select": "^9.1.3",
     "react-native-snap-carousel": "^3.9.1",
