--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/metro-runtime": "~3.1.3",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/checkbox": "^0.5.17",
+    "@react-native-community/geolocation": "^3.2.1",
     "@react-native-picker/picker": "^2.7.5",
     "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.6.8",
